# gw2buffbar

./: Cargo.toml  Makefile.toml  gw2buffbar.json
src/: buffs.rs  compat.rs  config.rs  lib.rs  ui.rs
