[package]
name = "gw2buffbar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.8.5"
log = "0.4.22"
once_cell = "1.19.0"
arcdps = { git = "https://github.com/Zerthox/arcdps-bindings", version = "0.15.0", features = [
    "log",
] }
arc_util = { git = "https://github.com/zerthox/arcdps-utils", features = [
    "settings",
] }
